[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litellm-free-image-providers"
version = "0.1.0"
description = "Custom LiteLLM providers for Pollinations.ai and AI Horde, two free image-generation APIs"
readme = "README.md"
license = "MIT"
authors = [{ name = "Khaled AbuShqear", email = "qmax93@gmail.com" }]
requires-python = ">=3.10"
keywords = ["litellm", "litellm-provider", "image-generation", "pollinations", "ai-horde"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["litellm>=1.89.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/shqear93/litellm-free-image-providers"
Repository = "https://github.com/shqear93/litellm-free-image-providers"
Issues = "https://github.com/shqear93/litellm-free-image-providers/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/litellm_free_image_providers"]
